[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laravel-to-postman"
version = "0.1.0"
description = "Convert Laravel routes to Postman collection"
readme = "README.md"
authors = [{ name = "Nicholas Cheek", email = "nick@nicholascheek.com" }]
license = { text = "MIT" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nickcheek/laravel-postman-from-api-routes"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
laravel2postman = "laravel_to_postman.main:cli"